--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ requires-python = ">=3.9"
 dependencies = [
     "singer-sdk~=0.44.3",
     "sqlalchemy~=2.0.36",
+    "pyodbc"
 ]
 
 [project.optional-dependencies]
