--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,7 +24,7 @@ requires-python = ">=3.9"
 dependencies = [
     "singer-sdk~=0.44.3",
     "sqlalchemy~=2.0.36",
-    "pyodbc = ^5.2.0",
+    "pyodbc = 5.2.0",
     "pendulum"
 ]
 
@@ -41,7 +41,7 @@ tap-aptify = 'tap_aptify.tap:Tapaptify.cli'
 dev = [
     "pytest>=8",
     "singer-sdk[testing]~=0.44.3",
-    "pyodbc = ^5.2.0",
+    "pyodbc = 5.2.0",
     "pendulum"
 ]
 
