--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "singer-sdk~=0.44.3",
     "sqlalchemy~=2.0.36",
     "pyodbc==5.2.0",
-    "pendulum"
+    "pendulum",
+    "pymssql==2.3.0"
 ]
 
 [project.optional-dependencies]
@@ -42,7 +43,8 @@ dev = [
     "pytest>=8",
     "singer-sdk[testing]~=0.44.3",
     "pyodbc==5.2.0",
-    "pendulum"
+    "pendulum",
+    "pymssql==2.3.0"
 ]
 
 [tool.pytest.ini_options]
