--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,11 @@
-[project]
+[tool.poetry]
 name = "tap-aptify"
 version = "0.0.1"
 description = "Singer tap for aptify, built with the Meltano Singer SDK."
+authors = ["FirstName LastName <firstname.lastname@example.com>"]
+license = "Apache-2.0"
 readme = "README.md"
-authors = [{ name = "FirstName LastName", email = "firstname.lastname@example.com" }]
-keywords = [
-    "ELT",
-    "aptify",
-]
+keywords = ["ELT", "aptify"]
 classifiers = [
     "Intended Audience :: Developers",
     "License :: OSI Approved :: Apache Software License",
@@ -18,23 +16,25 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Programming Language :: Python :: 3.13",
 ]
-license = "Apache-2.0"
-license-files = [ "LICENSE" ]
-requires-python = ">=3.9"
-dependencies = [
-    "singer-sdk~=0.44.3",
-    "sqlalchemy~=2.0.36",
-    "pendulum",
-    "pymssql==2.3.0"
-]
 
-[project.optional-dependencies]
-s3 = [
-    "fs-s3fs~=1.1.1",
-]
+[tool.poetry.dependencies]
+python = ">=3.9,<3.14"
+singer-sdk = "~0.44.3"
+sqlalchemy = "~2.0.36"
+pendulum = "*"
+pymssql = "2.3.0"
+pyodbc = "^5.2.0"
 
-[project.scripts]
+[tool.poetry.extras]
+s3 = ["fs-s3fs"]
+
+
+[tool.poetry.scripts]
 tap-aptify = "tap_aptify.tap:Tapaptify.cli"
+
+[tool.poetry.dev-dependencies]
+pytest = ">=8"
+singer-sdk = { version = "~0.44.3", extras = ["testing"] }
 
 [tool.mypy]
 python_version = "3.12"
@@ -45,9 +45,7 @@ plugins = "sqlmypy"
 target-version = "py39"
 
 [tool.ruff.lint]
-ignore = [
-    "COM812",  # missing-trailing-comma
-]
+ignore = ["COM812"]
 select = ["ALL"]
 
 [tool.ruff.lint.flake8-annotations]
@@ -57,20 +55,4 @@ allow-star-arg-any = true
 convention = "google"
 
 [tool.pytest.ini_options]
-addopts = [
-    "--durations=10",
-]
-
-[build-system]
-requires = [
-    "hatchling>=1,<2",
-]
-build-backend = "hatchling.build"
-
-[dependency-groups]
-dev = [
-    "pytest>=8",
-    "singer-sdk[testing]~=0.44.3",
-    "pendulum",
-    "pymssql==2.3.0"
-]
+addopts = ["--durations=10"]
