--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,57 +2,60 @@
 name = "tap-aptify"
 version = "0.0.1"
 description = "Singer tap for aptify, built with the Meltano Singer SDK."
-authors = ["FirstName LastName <firstname.lastname@example.com>"]
-license = "Apache-2.0"
 readme = "README.md"
-keywords = ["ELT", "aptify"]
-classifiers = [
-    "Intended Audience :: Developers",
-    "License :: OSI Approved :: Apache Software License",
-    "Operating System :: OS Independent",
-    "Programming Language :: Python :: 3.9",
-    "Programming Language :: Python :: 3.10",
-    "Programming Language :: Python :: 3.11",
-    "Programming Language :: Python :: 3.12",
-    "Programming Language :: Python :: 3.13",
+authors = ["FirstName LastName <firstname.lastname@example.com>"]
+keywords = [
+    "ELT",
+    "aptify",
+]
+license = "Apache-2.0"
+
+# Explicitly include only the tap_aptify package
+packages = [
+  { include = "tap_aptify" }
 ]
 
 [tool.poetry.dependencies]
-python = ">=3.9,<3.14"
-singer-sdk = "~0.44.3"
+python = ">=3.9,<3.12"
+singer-sdk = { version = "~0.44.3" }
 sqlalchemy = "~2.0.36"
 pendulum = "*"
-pymssql = "2.3.0"
 pyodbc = "^5.2.0"
+fs-s3fs = { version = "^1.1.1", optional = true }
+
+[tool.poetry.dev-dependencies]
+pytest = "^7.2.1"
+singer-sdk = { version = "~0.44.3", extras = ["testing"] }
 
 [tool.poetry.extras]
 s3 = ["fs-s3fs"]
 
-
-[tool.poetry.scripts]
-tap-aptify = "tap_aptify.tap:Tapaptify.cli"
-
-[tool.poetry.dev-dependencies]
-pytest = ">=8"
-singer-sdk = { version = "~0.44.3", extras = ["testing"] }
-
 [tool.mypy]
-python_version = "3.12"
+python_version = "3.9"
 warn_unused_configs = true
 plugins = "sqlmypy"
 
 [tool.ruff]
+ignore = [
+    "ANN101",  # missing-type-self
+    "ANN102",  # missing-type-cls
+]
+select = ["ALL"]
+src = ["tap_aptify"]
 target-version = "py39"
 
-[tool.ruff.lint]
-ignore = ["COM812"]
-select = ["ALL"]
-
-[tool.ruff.lint.flake8-annotations]
+[tool.ruff.flake8-annotations]
 allow-star-arg-any = true
 
-[tool.ruff.lint.pydocstyle]
+[tool.ruff.isort]
+known-first-party = ["tap_aptify"]
+
+[tool.ruff.pydocstyle]
 convention = "google"
 
-[tool.pytest.ini_options]
-addopts = ["--durations=10"]
+[build-system]
+requires = ["poetry-core>=1.0.8"]
+build-backend = "poetry.core.masonry.api"
+
+[tool.poetry.scripts]
+tap-aptify = "tap_aptify.tap:Tapaptify.cli"
